[package]
name = "mixkey"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
once_cell = "1.18"
rustc-hex = "2.1"
aes-gcm = "0.10"
bs58 = "0.5"
secp256k1 = { version = "0.28", features = ["rand-std", "recovery"] }
ed25519-dalek = "2.0"
blst = "0.3"
rand_core = "0.6"
rand = "0.8"
sha3 = "0.10" 
sha2 = "0.10"
log = "0.4"
colored = "2"
thiserror = "1.0"